welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: not found: value PrendBiscuit
PrendBiscuit()
^Balin:11: error: not found: value PoseBiscuit
PoseBiscuit();
^