welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur){
	while (!estSurBiscuit()){
	avance();
}
PrendBiscuit()
while (!estSurBiscuit()){
	recule();
}
avance()
PoseBiscuit();
}